2008-01-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	Simplified gnome_cmd_file_get_extension()

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Define SHIFT+F4 binding as user definable (file.edit_new_doc)

2008-01-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	Fix for starting the new document

2008-01-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Fixed the size of text array (text[3] -> text[4]).
	That fixes crashes #346286, #424447, #447882, #467058.

2008-01-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer:
	Rename libgviewer -> intviewer

2008-01-02  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-xfer.cc:
	Fix for problem #353889 (disappearing file after failed move (F6))

2008-01-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Fix for crash on gentoo

2008-01-01  Djihed Afifi <djihedlists@googlemail.com>

	* src/gnome-cmd-main-win.cc:
	Made window title translatable

2007-12-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Fixed misplaced bracket in regex handling

2007-12-23  <rehsack@web.de>

	* src/gnome-cmd-python-plugin.cc:
	Fixed crash #468685

2007-12-13  Piotr Eljasiak  <epiotr@use.pl>

	* /src/gnome-cmd-data.cc:
	* /src/gnome-cmd-data.h:
	* /src/gnome-cmd-remote-dialog.cc:
	quick-connect working again

2007-12-12  Damien Carbery  <damien.carbery@sun.com>

	* src/libgviewer/fileops.c:
	Fix for problem #365227 (build for Solaris x86)

2007-12-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/libgviewer/search-dlg.cc:
	* src/libgviewer/viewer-window.cc:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-taglib.cc:
	Fix for problem #502756 (translations)

	* src/imageloader.cc:
	* src/utils.cc:
	* src/tags/gnome-cmd-tags-doc.cc: