@@ -1,3 +1,9 @@
+2008-01-08  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file.cc:
+	* src/gnome-cmd-file.h:
+	Added gnome_cmd_file_get_dirname() 
+
 2008-01-07  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file.cc:
